--- a/settings.json
+++ b/settings.json
@@ -136,5 +136,6 @@
     "**/CVS": true,
     "**/.DS_Store": true,
     "**/node_modules": true
-  }
+  },
+  "workbench.sideBar.location": "right"
 }
