add binding to go to type definition easily

--- a/User/settings.json
+++ b/User/settings.json
@@ -124,6 +124,13 @@
     {
       "before": ["leader", "l"],
       "commands": ["workbench.action.focusRightGroup"]
+    },
+    // custom bindings
+    {
+      // gt -> go to definition
+      // gtd -> go to type definition
+      "before": ["g", "t", "d"],
+      "commands": ["editor.action.goToTypeDefinition"]
     }
   ],
   "vim.handleKeys": {
